--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,11 @@ block content
 	include ../sections/header-top.pug
 	include ../sections/header-content.pug
 	include ../sections/about.pug
+	include ../sections/benefits.pug
+	include ../sections/products.pug
+	include ../sections/reviews.pug
+	include ../sections/contacts.pug
+	include ../sections/footer.pug
 	
 	
 	
