--- a/src/pug/sections/about.pug
+++ b/src/pug/sections/about.pug
@@ -1,12 +1,14 @@
-section.about 
+section.about#about
     .container 
+        .about__img
+            img(src="./img/about-img.webp", alt="about-img")
         .about__title 
-            h2.h2 О кондитере
+            h2.h2(data-title="О кондитере") О кондитере
         .about__content 
             .about__text
                 p Меня зовут Ваитор, я профессиональный повар-кондитер. Более 15 лет я работаю в ведущих кондитерских Москвы. 3 года назад открыл собственное производство.
                 p Создаю не только красивые, но и очень вкусные торты, пирожные, капкейки. А ваши фантазия и вдохновение помогают становится им настоящими произведениями искусства.
                 p Вы можете быть уверены, что при изготовлении вашего неповторимого торта, используются только натуральные ингредиенты, свежие ягоды и фрукты.
-            .about__img 
+            .about__portrait 
                 img(src="./img/portrait.webp")
         
