--- a/src/pug/sections/header-content.pug
+++ b/src/pug/sections/header-content.pug
@@ -1,4 +1,4 @@
-section.header-content.none
+section.header-content
     .container
         .header-content-wrapper
             .header-content-col
