--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -1,4 +1,4 @@
-header.header-top.none
+header.header-top
    .container 
       nav.nav
          .nav__logo
@@ -6,15 +6,15 @@ header.header-top.none
      
          ul.nav__menu 
             li
-               a(href="#!") О кондитере
+               a(href="#about") О кондитере
             li
-               a(href="#!") Преимущества
+               a(href="#benefits") Преимущества
             li 
-               a(href="#!") Продукция
+               a(href="#products") Продукция
             li 
-               a(href="#!") Отзывы
+               a(href="#reviews") Отзывы
             li 
-               a(href="#!") Контакты
+               a(href="#contacts") Контакты
             
          .nav__social
             +social([
@@ -25,4 +25,9 @@ header.header-top.none
 
          .nav__tel 
             a(href="tel:+79008885533") 8-900-888-55-33
+
+         <!-- burger -->
+         //- button.menu-toggle
+         //-    span
+				
    
