--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -145,8 +145,14 @@ select:-webkit-autofill:focus {
 }
 
 .container {
-  width: var(--container-width);
+  max-width: var(--container-width);
   margin: 0 auto;
+  padding: 0 15px;
+}
+
+.containerXL {
+  width: 100%;
+  max-width: 1530px;
 }
 
 .h1 {
@@ -157,9 +163,37 @@ select:-webkit-autofill:focus {
 }
 
 .h2 {
+  position: relative;
   font-family: "Montserrat", sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
+  text-align: center;
 }
+
+.h2:after {
+  content: attr(data-title);
+  text-transform: uppercase;
+  white-space: nowrap;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 82px;
+  color: rgba(0, 0, 0, 0.05);
+  z-index: -1;
+}
+
+.h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: normal;
+  text-align: end;
+}
+
