--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,12 +5,23 @@
 //blocks
 
 @import "./blocks/social";
+@import "./blocks/menu-burger";
 @import "./blocks/btn-calc";
 @import "./blocks/btn-more";
+@import "./blocks/btn-gradient";
+@import "./blocks/benefits-item";
+@import "./blocks/products-slider";
+@import "./blocks/product-card";
+@import "./blocks/review-card";
 
 //sections
 
  @import "./sections/header-top";
  @import "./sections/header-content";
  @import "./sections/about";
+ @import "./sections/benefits";
+ @import "./sections/products";
+ @import "./sections/reviews";
+ @import "./sections/contacts";
+ @import "./sections/footer";
 
