--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,8 +4,8 @@ block variables
 	-var title = "Page";
 
 block content
-	include ../sections/header-top.pug
-	include ../sections/header-content.pug
+	include ../sections/header.pug
+	include ../sections/header-banner.pug
 	include ../sections/about.pug
 	include ../sections/benefits.pug
 	include ../sections/products.pug
