--- a/src/scss/blocks/_menu-toggle.scss
+++ b/src/scss/blocks/_menu-toggle.scss
@@ -1,5 +1,7 @@
+/*========GAMBURGER======*/
+
 .menu-toggle {
-//   z-index: 6;
+  z-index: 6;
   cursor: pointer;
   justify-content: center;
   align-items: center;
