--- a/src/pug/sections/header-banner.pug
+++ b/src/pug/sections/header-banner.pug
@@ -1,13 +1,13 @@
-section.header-content
+section.header-banner
     .container
-        .header-content-wrapper
-            .header-content-col
-                .header-content__title 
+        .header-banner-wrapper
+            .header-banner-col
+                .header-banner__title 
                     h1.h1 Полезные десерты из натуральных продуктов
-                .header-content__text 
+                .header-banner__text 
                     p Приготовим и привезем за 1 день. Все товары везем в холодильнике. Работаем по Москве и Московской области.
-                .header-content__btns
+                .header-banner__btns
                     button.btn-calc Рассчитать стоимость
                     button.btn-more Подробнее
-            .header-content__img 
+            .header-banner__img 
                     img(src="./img/header-img.webp", alt="header-img")
