--- a/src/scss/sections/_header-banner.scss
+++ b/src/scss/sections/_header-banner.scss
@@ -1,44 +1,44 @@
-.header-content {
+.header-banner {
     padding-top: 177px;
     padding-bottom: 135px;
     background-image: var(--gradient);
 }
 
-.header-content-wrapper {
+.header-banner-wrapper {
     display: flex;
     gap: 70px;
     align-items: center;
 }
 
-.header-content-col {
+.header-banner-col {
     position: relative;
     max-width: 532px;
 }
 
-.header-content__title {
+.header-banner__title {
     margin-bottom: 30px;
 }
 
-.header-content__text {
+.header-banner__text {
     p {
         font-size: 16px;
         line-height: 1.7;
     }
 }
 
-.header-content__btns {
+.header-banner__btns {
     margin-top: 57px;
     display: flex;
     gap: 30px;
 }
 
-.header-content__img {
+.header-banner__img {
     position: absolute;
     top: 62px;
     right: 0;
 }
 
-.header-content__img img {
+.header-banner__img img {
     animation-name: swingElement;
     animation-duration: 5s;
     animation-iteration-count: infinite;
