--- a/src/pug/sections/about.pug
+++ b/src/pug/sections/about.pug
@@ -1,4 +1,4 @@
-section.about#about
+section.about.none#about
     .container 
         .about__img
             img(src="./img/about-img.webp", alt="about-img")
