--- a/src/pug/sections/contacts.pug
+++ b/src/pug/sections/contacts.pug
@@ -1,4 +1,4 @@
-section.contacts#contacts
+section.contacts.none#contacts
     .container 
         .contacts__title 
             h2.h2(data-title = "Контакты") Контакты
