--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -29,5 +29,8 @@ header.header
 
          <!-- burger -->
          include ../blocks/menu-toggle.pug
+
+         .aside-menu-wrapper
+            include ../blocks/aside-menu.pug
 				
    
