--- a/src/scss/blocks/_menu-toggle.scss
+++ b/src/scss/blocks/_menu-toggle.scss
@@ -1,16 +1,20 @@
 /*========GAMBURGER======*/
 
 .menu-toggle {
+  display: none;
   z-index: 6;
   cursor: pointer;
   justify-content: center;
   align-items: center;
   width: 30px;
   height: 30px;
-  display: flex;
   position: relative;
   flex-shrink: 0;
-  background-color: yellow;
+  background-color: #fff;
+
+  @media (max-width: 992px) {
+    display: flex;
+  }
 }
 
 .menu-toggle span {
