--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 
 @import "./blocks/social";
 @import "./blocks/menu-toggle";
+@import "./blocks/aside-menu";
 @import "./blocks/btn-calc";
 @import "./blocks/btn-more";
 @import "./blocks/btn-gradient";
