--- a/src/scss/blocks/_btn-more.scss
+++ b/src/scss/blocks/_btn-more.scss
@@ -4,6 +4,7 @@
     padding: 0 50px;
     height: 70px;
     max-width: 255px;
+    width: 255px;
 
     border-radius: 16px;
     border: 1px solid #1D1515;
