--- a/src/scss/blocks/_menu-toggle.scss
+++ b/src/scss/blocks/_menu-toggle.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.menu-toggle.active {
+  background: transparent;
+}
+
 .menu-toggle span {
   position: relative;
   height: 2px;
@@ -53,9 +57,11 @@
 .menu-toggle.active span::after {
   top: 0px;
   transform: rotate(45deg);
+  background-color: #fff;
 }
 
 .menu-toggle.active span::before {
   bottom: 0px;
   transform: rotate(-45deg);
+  background-color: #fff;
 }
