--- a/src/scss/blocks/_aside-menu.scss
+++ b/src/scss/blocks/_aside-menu.scss
@@ -23,6 +23,7 @@
     padding: 40px;
     padding-top: 80px;
     max-width: 375px;
+    width: 375px;
     background: linear-gradient(180deg, #00B09B 0%, #96C93D 100%);
 
     @media (min-width: 1900px) {
@@ -36,4 +37,13 @@
     flex-direction: column;
     justify-content: center;
     row-gap: 15px;
+}
+
+.aside-menu .nav-menu a {
+    font-size: 18px;
+    line-height: normal;
+
+    &:hover, &:active {
+        color: #fff;
+    }
 }
