--- a/src/scss/blocks/_btn-calc.scss
+++ b/src/scss/blocks/_btn-calc.scss
@@ -3,8 +3,8 @@
    
     padding: 0 50px;
     height: 70px;
-    max-width: 255px;
-
+    width: 255px;
+    
     border-radius: 16px;
     border: none;
 
