--- a/src/scss/blocks/_social.scss
+++ b/src/scss/blocks/_social.scss
@@ -5,5 +5,11 @@
     justify-content: center;
 }
 
+.social-icons__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 
