--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -175,6 +175,14 @@ select:-webkit-autofill:focus {
   line-height: normal;
   text-transform: uppercase;
   text-align: center;
+
+  @media (max-width: 767px) {
+    font-size: 24px;
+  }
+
+  @media (max-width: 390px) {
+    text-align: left;
+  }
 }
 
 .h2:after {
