--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -1,6 +1,16 @@
 .about {
     padding-top: 124px;
     padding-bottom: 245px;
+
+    @media (max-width: 1199px) {
+        padding-top: 80px;
+        padding-bottom: 60px;
+    }
+
+    @media (max-width: 767px) {
+        padding-top: 30px;
+        padding-bottom: 0;
+    }
 }
 
 .about .container {
@@ -25,6 +35,10 @@
 
 .about__title {
     margin-bottom: 94px;
+
+    @media (max-width: 767px) {
+        margin-bottom: 30px;
+    }
 }
 
 .about__content {
@@ -44,6 +58,10 @@
     font-style: italic;
     font-weight: 300;
     line-height: normal;
+
+    @media (max-width: 767px) {
+        font-size: 16px;
+    }
 }
 
 .about__text p+p {
