--- a/src/pug/sections/benefits.pug
+++ b/src/pug/sections/benefits.pug
@@ -1,4 +1,4 @@
-section.benefits.none#benefits
+section.benefits#benefits
     .container 
         .benefits__title 
             h2.h2(data-title = "Преимущества") Преимущества
