--- a/src/scss/sections/_benefits.scss
+++ b/src/scss/sections/_benefits.scss
@@ -2,17 +2,43 @@
     padding-top: 50px;
     padding-bottom: 138px;
     position: relative;
+
+    @media (max-width: 1199px) {
+        padding-top: 80px;
+        padding-bottom: 60px;
+    }
+
+    @media (max-width: 767px) {
+        padding-top: 30px;
+        padding-bottom: 0;
+    }
   
 }
 
 .benefits__title {
     margin-bottom: 115px;
+
+    @media (max-width: 767px) {
+        margin-bottom: 30px;
+    }
 }
 
 .benefits__content {
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 40px;
+
+    @media (max-width: 1439px) {
+        grid-template-columns: 400px 400px;
+    }
+
+    @media (max-width: 1199px) {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @media (max-width: 767px) {
+        grid-template-columns: 1fr;
+    }
    
 }
 
@@ -22,4 +48,9 @@
     right: -50px;
     top: 80px;
     z-index: -1;
+
+    @media (max-width: 1199px) {
+        display: none;
+    }
+  
 }
