--- a/src/pug/sections/products.pug
+++ b/src/pug/sections/products.pug
@@ -1,4 +1,4 @@
-section.products.none#products
+section.products#products
     .container.containerXL 
         .products__title 
             h2.h2(data-title = "Продукция") Продукция
