--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -1,11 +1,16 @@
 .product-card {
     padding: 211px 15px 15px 15px;
     max-width: 457px;
+    min-height: 350px;
     width: 100%;
     position: relative;
     text-align: center;
     background-color: #fff;
     border-radius: 19px;
+
+    @media (max-width: 1023px) {
+        padding-top: 145px;
+    }
 }
 
 .product-card::after {
@@ -29,6 +34,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
+    @media (max-width: 1023px) {
+        width: 231px;
+        height: 244px;
+    }
+
     img {
         width: 100%;
         height: 100%;
@@ -46,12 +56,15 @@
     padding: 0 16px;
     width: 132px;
     color: #FFF;
-    // background-color: #D31119;
     font-size: 16px;
     font-weight: 700;
     line-height: 40px;
     letter-spacing: 0.64px;
     text-transform: uppercase;
+
+    @media (max-width: 1023px) {
+        top: 80px;
+    }
 }
 
 .product-card__label.label-sale {
@@ -67,13 +80,17 @@
 }
 
 .product-card__info {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 51px;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr;
+    // grid-column-gap: 51px;
     margin-bottom: 33px;
+
+    display: flex;
+    gap: 50px;
 }
 
 .product-card__info-col {
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -90,6 +107,10 @@
     span {
         font-size: 14px;
     }
+}
+
+.product-card__text {
+    width: 50%;
 }
 
 .product-card__text p {
