--- a/src/scss/sections/_products.scss
+++ b/src/scss/sections/_products.scss
@@ -1,7 +1,10 @@
 .products {
     padding-top: 50px;
-    // padding-bottom: 132px;
     position: relative;
+
+    @media (max-width: 797px) {
+        padding-top: 30px;
+    }
   
 }
 
