--- a/src/pug/sections/products.pug
+++ b/src/pug/sections/products.pug
@@ -5,7 +5,7 @@ section.products#products
         .swiper#products-slider
             .swiper-wrapper
                 .swiper-slide
-                    +product("01", "Орео", "800", "Клубника, шоколад, сахар, мука, яйца, сливки, сливочный сыр.", "Акция", "label-sale")  
+                    +product("01", "Орео", "800", "Клубника, шоколад, сахар, мука, яйца, сливки, сливочный сыр. vjkjrj verf ckbdjxysq csh", "Акция", "label-sale")  
                 .swiper-slide 
                     +product("02", "Клубничка", "1000", "Клубника, шоколад, сахар, мука, яйца, сливки, сливочный сыр.", "Новинка", "label-new")
                 .swiper-slide
