--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -10,6 +10,7 @@
 
     @media (max-width: 1023px) {
         padding-top: 145px;
+        min-height: 250px;
     }
 }
 
@@ -84,6 +85,12 @@
 
     display: flex;
     gap: 50px;
+
+    @media (max-width: 797px) {
+        flex-direction: column;
+        gap: 10px;
+        margin-bottom: 30px;
+    }
 }
 
 .product-card__info-col {
@@ -93,6 +100,15 @@
     gap: 12px;
     align-items: flex-end; 
     max-height: 81px;
+
+    @media (max-width: 797px) {
+        flex-direction: row;
+        gap: 10px;
+        width: 100%;
+        min-height: 45px;
+        align-items: first baseline;
+        justify-content: space-between;
+    }
 }
 
 .product-card__price {
@@ -101,9 +117,14 @@
     font-size: 18px;
     font-weight: 700;
     line-height: normal;
+    white-space: nowrap;
 
     span {
         font-size: 14px;
+    }
+
+    @media (max-width: 797px) {
+        width: 120px;
     }
 }
 
@@ -115,12 +136,22 @@
     -webkit-line-clamp: 3;
 
     overflow: hidden;
+
+    @media (max-width: 797px) {
+        width: 100%;
+        min-height: 48px;
+        -webkit-line-clamp: 2;
+    }
 }
 
 .product-card__text p {
     font-size: 16px;
     line-height: 1.7;
     text-align: left;
+
+    @media (max-width: 797px) {
+        font-size: 14px;
+    }
 }
 
 .product-card__btns {
@@ -132,4 +163,8 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
+
+    @media (max-width: 797px) {
+        gap: 12px;
+    }
 }
