--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -10,7 +10,7 @@
 
     @media (max-width: 1023px) {
         padding-top: 145px;
-        min-height: 250px;
+        min-height: 345px;
     }
 }
 
@@ -166,5 +166,6 @@
 
     @media (max-width: 797px) {
         gap: 12px;
+        bottom: 23px;
     }
 }
