--- a/src/scss/blocks/_products-slider.scss
+++ b/src/scss/blocks/_products-slider.scss
@@ -4,6 +4,10 @@
     @media (max-width: 1023px) {
         padding-top: 140px;
     }
+
+    @media (max-width: 797px) {
+        padding-bottom: 100px;
+    }
 }
 
 .swiper-wrapper {
