--- a/src/pug/sections/reviews.pug
+++ b/src/pug/sections/reviews.pug
@@ -1,4 +1,4 @@
-section.reviews.none#reviews
+section.reviews#reviews
     .container
         .reviews__title 
             h2.h2(data-title = "Отзывы") Отзывы
