--- a/src/scss/blocks/_review-card.scss
+++ b/src/scss/blocks/_review-card.scss
@@ -2,6 +2,11 @@
     display: flex;
     align-items: flex-start;
     gap: 34px;
+
+    @media (max-width: 767px) {
+        width: 320px;
+        flex-shrink: 0;
+    }
 }
 
 .review-card__img {
