--- a/src/scss/sections/_reviews.scss
+++ b/src/scss/sections/_reviews.scss
@@ -7,11 +7,34 @@
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -2;
+
+    @media (max-width: 1199px) {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    @media (max-width: 1023px) {
+        background-image: none;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
 
 .reviews__title {
     text-align: center;
     margin-bottom: 89px;
+
+    @media (max-width: 1023px) {
+        margin-bottom: 30px;
+    }
+}
+
+.scroll-wrapper {
+    @media (max-width: 767px) {
+        width: calc(50% + 50vw);
+        overflow: hidden;
+        overflow-x: auto;
+    }
 }
 
 .reviews-content {
@@ -19,4 +42,13 @@
     grid-template-columns: repeat(3, 1fr);
     column-gap: 35px;
     row-gap: 60px;
+
+    @media (max-width: 1199px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 767px) {
+        display: flex;
+        column-gap: 30px;
+    }
 }
