--- a/src/scss/sections/_products.scss
+++ b/src/scss/sections/_products.scss
@@ -11,6 +11,10 @@
 .products-slider {
     padding-top: 200px;
     padding-bottom: 150px;
+
+    @media (max-width: 1199px) {
+        width: calc(50% + 50vw);
+    }
 }
 
 .slider-wrapper {
