--- a/src/pug/sections/products.pug
+++ b/src/pug/sections/products.pug
@@ -1,8 +1,8 @@
-section.products#products
+section.products.none#products
     .container.containerXL 
         .products__title 
             h2.h2(data-title = "Продукция") Продукция
-        .swiper#products-slider
+        .swiper.products-slider#products-slider
             .swiper-wrapper
                 .swiper-slide
                     +product("01", "Орео", "800", "Клубника, шоколад, сахар, мука, яйца, сливки, сливочный сыр.", "Акция", "label-sale")  
