--- a/src/scss/sections/_products.scss
+++ b/src/scss/sections/_products.scss
@@ -13,7 +13,7 @@
     padding-bottom: 150px;
 
     @media (max-width: 1199px) {
-        width: calc(50% + 50vw);
+        width: calc(50vw + 50%);
     }
 }
 
