--- a/src/scss/sections/_benefits.scss
+++ b/src/scss/sections/_benefits.scss
@@ -2,6 +2,7 @@
     padding-top: 50px;
     padding-bottom: 138px;
     position: relative;
+    overflow: hidden;
 
     @media (max-width: 1199px) {
         padding-top: 80px;
