--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -1,7 +1,9 @@
-footer.footer.none
+footer.footer
     .container 
-        .footer-content 
-            p Все права защищены. 2022
+        .footer-content
+            .footer-left 
+                p Все права защищены. 2022
             .footer__logo 
                 img(src="./img/logo.webp", alt="logo")
-            p Политика конфиденциальности
+            .footer-right
+                p Политика конфиденциальности
