--- a/src/scss/sections/_contacts.scss
+++ b/src/scss/sections/_contacts.scss
@@ -1,10 +1,29 @@
 .contacts {
     padding-top: 100px;
     padding-bottom: 40px;
+
+    @media (max-width: 767px) {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
+.contacts .container {
+    @media (max-width: 390px) {
+        padding: 0;
+    }
 }
 
 .contacts__title {
     margin-bottom: 71px;
+
+    @media (max-width: 767px) {
+        margin-bottom: 32px;
+    }
+
+    @media (max-width: 390px) {
+        padding-left: 15px;
+    }
 }
 
 .contacts-content {
@@ -15,19 +34,50 @@
     @media (max-width: 991px) {
         column-gap: 30px;
     }
+
+    @media (max-width: 767px) {
+        flex-direction: column;
+    }
 }
 
 .contacts-list {
     display: flex;
     flex-direction: column;
-    // width: 100%;
     justify-content: space-between;
+
+    @media (max-width: 767px) {
+        margin-bottom: 30px;
+    }
+
+    @media (max-width: 390px) {
+        padding-left: 15px;
+    }
 }
 
 .contacts-list ul {
     display: flex;
     justify-content: space-between;
     width: 350px;
+
+    @media (max-width: 1023px) {
+        justify-content: flex-start;
+        gap: 40px;
+    }
+
+    @media (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+        row-gap: 34px;
+        margin-bottom: 30px;
+    }
+}
+
+.contacts-list ul li {
+    @media (max-width: 767px) {
+        display: flex;
+        align-items: center;
+        column-gap: 60px;
+    }
 }
 
 .contacts-text {
@@ -36,6 +86,10 @@
     font-size: 18px;
     font-weight: 700;
     line-height: normal;
+
+    @media (max-width: 767px) {
+        margin-bottom: 0;
+    }
 }
 
 .contacts-link {
@@ -67,4 +121,13 @@
         width: 50%;
         max-width: 625px;
     }
+
+    @media (max-width: 767px) {
+        width: 100%;
+        height: 185px;
+    }
 }
+
+
+
+
