--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -1,20 +1,54 @@
 .footer {
     padding-top: 20px;
     padding-bottom: 20px;
+
+    @media (max-width: 767px) {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
 
 .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 
     p {
         font-size: 16px;
         font-weight: 400;
         line-height: 24.56px; 
+
+        @media (max-width: 767px) {
+            font-size: 10px;
+            line-height: 1.5;
+        }
+    }
+
+    @media (max-width: 767px) {
+        flex-direction: column;
+        align-items: flex-end;
+
     }
 }
 
 .footer__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     flex-shrink: 0;
+
+    @media (max-width: 767px) {
+        left: 15px;
+        transform: translate(0, -50%);
+    }
+}
+
+.footer__logo img {
+
+    @media (max-width: 767px) {
+        width: 30px;
+        height: 30px;
+    }
 }
