--- a/src/scss/sections/_reviews.scss
+++ b/src/scss/sections/_reviews.scss
@@ -20,6 +20,10 @@
     }
 }
 
+.reviews .container {
+    position: relative;
+}
+
 .reviews__title {
     text-align: center;
     margin-bottom: 89px;
@@ -50,5 +54,6 @@
     @media (max-width: 767px) {
         display: flex;
         column-gap: 30px;
+        // overflow-x: hidden; 
     }
 }
