--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,4 +25,9 @@
  @import "./sections/reviews";
  @import "./sections/contacts";
  @import "./sections/footer";
+ @import "./sections/modal-faq";
+ @import "./sections/modal-order";
+ @import "./sections/modal-personal";
+ @import "./sections/modal-politics";
+
 
