--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,6 +12,10 @@ block content
 	include ../sections/reviews.pug
 	include ../sections/contacts.pug
 	include ../sections/footer.pug
+	include ../sections/modal-order.pug
+	include ../sections/modal-faq.pug
+	include ../sections/modal-politics.pug
+	include ../sections/modal-personal.pug
 	
 	
 	
