--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -216,3 +216,15 @@ select:-webkit-autofill:focus {
 }
 }
 
+.modal-frame-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  line-height: 44px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: var(--gradient);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
