--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -217,6 +217,7 @@ select:-webkit-autofill:focus {
 }
 
 .modal-frame-title {
+  margin-bottom: 57px;
   font-family: "Montserrat", sans-serif;
   font-size: 36px;
   line-height: 44px;
