--- a/src/scss/sections/_modal-order.scss
+++ b/src/scss/sections/_modal-order.scss
@@ -6,7 +6,9 @@
 }
 
 .product-info__img {
+    margin-right: 50px;
     width: 137px;
+    flex-shrink: 0;
 }
 
 .product-info__img img {
@@ -16,9 +18,22 @@
 }
 
 .product-info-desc {
+    margin-right: 47px;
     display: flex;
     flex-direction: column;
     row-gap: 21px;
+}
+
+.product-info__name {
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 700;
+  }
+
+.product-info__text {
+    font-size: 16px;
+    line-height: 1.7;
 }
 
 .items-counter-wrapper {
@@ -30,4 +45,21 @@
 .product-info-price {
     display: flex;
     flex-direction: column;
+}
+
+.items__current {
+    width: 40px;
+    height: 40px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 700;
+}
+
+.product-info__price {
+    font-family: "Montserrat", sans-serif;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: normal;
+    color: var(--accent-green);
 }
