--- a/src/scss/sections/_modal-order.scss
+++ b/src/scss/sections/_modal-order.scss
@@ -1,5 +1,3 @@
-
-
 .product-info {
     display: flex;
     align-items: center;
@@ -29,7 +27,7 @@
     font-size: 24px;
     line-height: 29px;
     font-weight: 700;
-  }
+}
 
 .product-info__text {
     font-size: 16px;
@@ -48,12 +46,61 @@
 }
 
 .items__current {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 40px;
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
     line-height: 29px;
     font-weight: 700;
+    border-radius: 5px;
+    background-color: #fff;
+    z-index: 7;
+}
+
+.items__current::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: 0px;
+    border-radius: 5px;
+    background: #FFF;
+  }
+
+.items__current::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -4;
+    margin: -1px;
+    border-radius: 5px;
+    background: linear-gradient(to bottom, #00B09B, #96C93D);
+}
+
+.items__control {
+    cursor: pointer;
+    background-color: #fff;
+    border: 0px;
+    font-size: 21px;
+    width: 24px;
+    height: 24px;
+    display: block;
+    padding: 0;
+    line-height: 20px;
+}
+
+.product-info-price {
+    margin-left: 56px;
 }
 
 .product-info__price {
