--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -21,4 +21,5 @@ html(lang="en")
         script(src="libs/swiper.js")
         script(src="js/main.js")
         script(src="js/toggleMenu.js")
+        script(src="js/modal.js")
         script(src="js/counter.js")
