--- a/src/pug/mixins/product.pug
+++ b/src/pug/mixins/product.pug
@@ -15,5 +15,5 @@ mixin product(img, title, price, text, label, labelCl)
         .product-card__btns
             button.btn-gradient 
                 span Подробнее
-            button.btn-gradient 
+            button.btn-gradient(frame-btn="order-form") 
                 span Заказать
