--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -75,6 +75,21 @@ body {
   height: 100vh;
 }
 
+*[frame-modal] {
+	transform: scale(0);
+	transition: .3s;
+}
+
+*.visible[frame-modal] {
+	transform: scale(1);
+	display: flex;
+	z-index: 10;
+	animation-name: opacity;
+	animation-duration: .3s;
+	animation-fill-mode: forwards;
+	animation-timing-function: ease-in-out;
+}
+
 .modal-frame-wrapper {
     position: fixed;
     display: flex;
