--- a/src/scss/sections/_modal-order.scss
+++ b/src/scss/sections/_modal-order.scss
@@ -17,6 +17,7 @@
 
 .product-info-desc {
     margin-right: 47px;
+    max-width: 212px;
     display: flex;
     flex-direction: column;
     row-gap: 21px;
