--- a/src/pug/sections/modal-order.pug
+++ b/src/pug/sections/modal-order.pug
@@ -19,4 +19,21 @@
                         .product-info__text Cтоимость
                         .product-info__price 800 руб
                 .person-info
+                    .form-item
+                        input(class="form-input" type="text" name="name" placeholder="Ваше имя")
+                    .form-item
+                        input(class="form-input" type="text" name="tel" placeholder="Ваш телефон")
+                    .form-item
+                        input(class="form-input" type="text" name="email" placeholder="Адрес доставки и комментарий к заказу")
+
+                    p.service-form-privacy 
+                        | Нажимая на кнопку, Вы даёте согласие на
+                        a(href="#!") обработку своих персональных данных
+                        | и соглашаетесь 
+                        a(href="#!") с политикой в отношении обработки персональных данных
+                    .form-item
+                        button(type="submit" frame-close class="btn") Оставить заявку
+        
+
+
             
