--- a/src/scss/sections/_modal-order.scss
+++ b/src/scss/sections/_modal-order.scss
@@ -1,4 +1,5 @@
 .product-info {
+    margin-bottom: 29px;
     display: flex;
     align-items: center;
 }
@@ -73,7 +74,7 @@
     margin: 0px;
     border-radius: 5px;
     background: #FFF;
-  }
+}
 
 .items__current::after {
     content: "";
@@ -110,4 +111,63 @@
     font-weight: 700;
     line-height: normal;
     color: var(--accent-green);
+}
+
+.person-info {
+    width: 378px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-title {
+    margin-bottom: 12px;
+    font-size: 18px;
+    line-height: 1.7;
+    text-align: center;
+}
+
+.form-input {
+    display: block;
+    width: 378px;
+    height: 40px;
+    padding: 7px 17px;
+    font-size: 16px;
+    line-height: 1.7;
+    border-radius: 5px;
+    font-family: inherit;
+
+    border: double 1px transparent;
+    border-radius: 5px;
+    background-image: linear-gradient(white, white),
+        linear-gradient(180deg, #00B09B 0%, #96C93D 100%);
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+}
+
+.form-input::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.form-item+.form-item {
+    margin-top: 15px;
+}
+
+.form-input:focus {
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+
+}
+
+.service-form-privacy {
+    font-size: 10px;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.service-form-privacy a {
+    font-size: 10px;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.3);
+    text-decoration: underline;
 }
