--- a/src/pug/sections/modal-order.pug
+++ b/src/pug/sections/modal-order.pug
@@ -19,20 +19,21 @@
                         .product-info__text Cтоимость
                         .product-info__price 800 руб
                 .person-info
+                    .form-title Заполните форму
                     .form-item
                         input(class="form-input" type="text" name="name" placeholder="Ваше имя")
                     .form-item
                         input(class="form-input" type="text" name="tel" placeholder="Ваш телефон")
                     .form-item
-                        input(class="form-input" type="text" name="email" placeholder="Адрес доставки и комментарий к заказу")
+                        input(class="form-input" type="text" name="order" placeholder="Адрес доставки и комментарий к заказу")
 
                     p.service-form-privacy 
-                        | Нажимая на кнопку, Вы даёте согласие на
-                        a(href="#!") обработку своих персональных данных
-                        | и соглашаетесь 
-                        a(href="#!") с политикой в отношении обработки персональных данных
+                        | Нажимая на кнопку "Оформить заказ", Вы даёте согласие на
+                        a(href="#!")  обработку своих персональных данных
+                        |  и соглашаетесь 
+                        a(href="#!")  с политикой конфиденциальности
                     .form-item
-                        button(type="submit" frame-close class="btn") Оставить заявку
+                        button(type="submit" frame-close class="btn-gradient") Оформить заказ
         
 
 
