--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -265,5 +265,9 @@ select:-webkit-autofill:focus {
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
+
+  @media (max-width: 767px) {
+    font-size: 24px;
+  }
 }
 
