--- a/src/pug/sections/modal-order.pug
+++ b/src/pug/sections/modal-order.pug
@@ -25,16 +25,17 @@
                     .form-item
                         input(class="form-input" type="text" name="tel" placeholder="Ваш телефон")
                     .form-item
-                        input(class="form-input" type="text" name="order" placeholder="Адрес доставки и комментарий к заказу")
+                        textarea(class="form-input form-input--textarea" type="text" name="message" placeholder="Адрес доставки и комментарий к заказу")
                     
-                    .form-item.checkbox
-                        input(type="checkbox" name="agree").real-checkbox
-                        span.custom-checkbox 
-                        span.checkbox-text
-                            | Нажимая на кнопку "Оформить заказ", Вы даёте согласие на
-                            a(href="#!")  обработку своих персональных данных
-                            |  и соглашаетесь 
-                            a(href="#!")  с политикой конфиденциальности
+                    .form-item
+                        label.checkbox
+                            input(type="checkbox" name="agree").real-checkbox
+                            span.custom-checkbox 
+                            span.checkbox-text
+                                | Нажимая на кнопку "Оформить заказ", Вы даёте согласие на
+                                a(href="#!")  обработку своих персональных данных
+                                |  и соглашаетесь 
+                                a(href="#!")  с политикой конфиденциальности
                     .form-item
                         button(type="submit" frame-close class="btn-gradient") Оформить заказ
         
