--- a/src/pug/sections/modal-order.pug
+++ b/src/pug/sections/modal-order.pug
@@ -36,7 +36,7 @@
                                 a(href="#!")  обработку своих персональных данных
                                 |  и соглашаетесь 
                                 a(href="#!")  с политикой конфиденциальности
-                    .form-item
+                    .form-item.form-item-btn
                         button(type="submit" frame-close class="btn-gradient") Оформить заказ
         
 
