--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -280,6 +280,7 @@ select:-webkit-autofill:focus {
   -webkit-background-clip: text;
 
   @media (max-width: 767px) {
+    margin-bottom: 15px;
     font-size: 24px;
   }
 }
