--- a/src/scss/sections/_modal-order.scss
+++ b/src/scss/sections/_modal-order.scss
@@ -13,6 +13,12 @@
     margin-bottom: 29px;
     display: flex;
     align-items: center;
+
+
+    @media (max-width: 500px) {
+        width: 100%;
+        justify-content: space-between;
+    }
 }
 
 .product-info__img {
@@ -20,7 +26,7 @@
     width: 137px;
     flex-shrink: 0;
 
-    @media (max-width: 767px) {
+    @media (max-width: 500px) {
         width: 80px;
         margin-right: 20px;
     }
@@ -65,7 +71,7 @@
     align-items: center;
     gap: 10px;
 
-    @media (max-width: 767px) {
+    @media (max-width: 500px) {
         gap: 5px;
     }
 }
@@ -132,7 +138,7 @@
 .product-info-price {
     margin-left: 56px;
 
-    @media (max-width: 767px) {
+    @media (max-width: 500px) {
         margin-left: 20px;
     }
 }
@@ -160,7 +166,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
 
     @media (max-width: 420px) {
         width: 100%;
@@ -285,9 +291,16 @@
     text-decoration: underline;
 }
 
+.form-item-btn {
+    display: flex;
+    justify-content: center;
+}
+
 .form-item .btn-gradient {
     padding: 0 22px;
     color: #fff;
+    // margin-left: auto;
+    // margin-right: auto;
 
     &:hover {
         color: #000;
