--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -114,6 +114,9 @@ body {
     @media (max-width: 767px) {
       width: 100%;
       padding: 30px 20px;
+      max-height: calc(100vh - 30px);
+      overflow: hidden;
+      overflow-y: auto;
     }
 }
 
