--- a/src/pug/mixins/product.pug
+++ b/src/pug/mixins/product.pug
@@ -1,4 +1,5 @@
 mixin product(img, title, price, text, label, labelCl)
+    // product-card
     .product-card 
         .product-card__img 
             img(src="./img/products/" + img + ".webp", alt= title)
