--- a/src/pug/mixins/review.pug
+++ b/src/pug/mixins/review.pug
@@ -1,4 +1,5 @@
 mixin review(img, name, text) 
+    // review-card
     .review-card 
         .review-card__img
             img(src="./img/reviews/" + img + ".webp", alt= name) 
